# Jarvis

./: .env.example  pyproject.toml  readme.md  taskfile.yaml
src/: agent.py  config.py
src/services/: perplexity_service.py
src/tools/: DYNAMIC_TOOLS_README.md  custom_tools_example.py  dynamic_tool_manager.py  web_search_tools.py
src/tools/mac/: __init__.py  apps.py  browser.py  calendar.py  clipboard.py  focus.py  media.py  meetings.py  messages.py  screenshot.py  shell.py  shortcuts.py  spotify.py  spotlight.py  system.py  utils.py  window.py
src/utils/: instructions.py  wake_word.py
